2012-03-23 John Wu <John dot Wu at ACM dot org>
	* src/colValues.cpp: in colValues::create, produce integer
	representations for categorical values (As Dominique points out,
	ibis::bundle and ibis::colValues are only associated with one data
	partition and therefore safe to use integer representation)
	* src/colValues.h, src/colValues.cpp: the function element size
	gave inconsistent types to function sizeof, move UInts::write from
	.h to .cpp, replace call to getString to getKey as suggested by
	Dominique

2012-03-22 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp:759 add statement to deal with the empty string
	* src/query.cpp, src/iroster.cpp: make consistent use of return 0
	for no hits and a positive number of some hits (passed 'make
	check')

2012-03-21 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h, src/bitvector.cpp: add function sloppyCount as
	a cheaper alternative for actually counting the number of 1s in a
	bit vector.  This should address a concern raised by dominique
	about invoking bitvector::cnt taking too much time

2012-03-20 John Wu <John dot Wu at ACM dot org>
	* src/bord.h, src/bord.cpp: add functions to work with string
	values as keys for group by operations (the previous attempt to
	make strings suitable for group by operaton were based on
	converting them to integers which can not be trusted when the
	dictionaries do not match, problem raised by Andrew Olson)
	* src/bord.cpp, src/category.cpp: getString did not return ith
	string value promised by the interface specification in some
	cases
	* src/array_t.cpp: array_t::deepCopy neglected to copy empty rhs
	(which was the cause of the problem with very short bit vectors
	reported by Teryl Taylor)

2012-03-19 John Wu <John dot Wu at ACM dot org>
	* src/index.h: add function ibis::index::sizeInBytes
	* src/category.cpp: review ibis::category::selectStrings to examine
	all three options (to avoid getting stuck with the option of using
	raw data when it is not present)